tests/baselines/reference/project/jsFileCompilationDifferentNamesNotSpecified/amd/jsFileCompilationDifferentNamesNotSpecified.errors.txt
lib.es5.d.ts(48,21): error TS6054: File 'lib.es2009.uint16array' has an unsupported extension. The only supported extensions are '.ts', '.tsx', '.d.ts', '.cts', '.d.cts', '.mts', '.d.mts'.


==== DifferentNamesNotSpecified/tsconfig.json (0 errors) ====
    {
      "compilerOptions": { "out": "test.js" }
    }
==== DifferentNamesNotSpecified/a.ts (0 errors) ====
    var test = 10;